--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
 [build]
   command = "npm run build"
   publish = "dist"
+
+[[redirects]]
+  from = "/cv-builder/*"
+  to = "https://cv-builder-placeholder.netlify.app/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
