--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,18 @@
-{"rewrites":[{"source":"/(.*)","destination":"/index.html"}]}
+{
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ],
+    "functions": {
+        "api/*.ts": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    }
+}
